# schemalattice

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  test
docs/: design-notes.md  schema-dsl.md
examples/: order.sl.yaml  sample_order.json  user_activity_event.sl.yaml
examples/evolution/: order_v1.sl.yaml  order_v2_breaking.sl.yaml  order_v2_safe.sl.yaml
schemalattice/: __init__.py  cli.py  compat.py  ir.py  linter.py  validate.py
schemalattice/generators/: __init__.py  avro_gen.py  json_schema_gen.py  protobuf_gen.py
schemalattice/parser/: __init__.py
tests/: test_compat.py  test_linter.py  test_parser.py  test_roundtrip.py  test_validate.py
